# foldersync

./: .gitmodules  CMakeLists.txt
src/: CMakeLists.txt  client.cpp  client.h  connection.cpp  connection.h  fileevent.cpp  fileevent.h  filehandler.cpp  filehandler.h  filewatcher.cpp  filewatcher.h  main.cpp  messages.h  threadwrapper.h
src/test/: CMakeLists.txt  testConnection.cpp  testFileHandler.cpp  testFileWatcher.cpp
